# lol-chatbot

./: .gitignore  README.md  lol_chatbot.ipynb  main.py  pyproject.toml
backend/: app.py  kb.py  rag.py
frontend/: package-lock.json
frontend/src/pages/: index.astro
