[project]
name = "lol-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pydantic>=2.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.4.1",
    "uvicorn[standard]>=0.32.0",
]
